# J.A.R.V-ish

./: .gitignore  pyproject.toml
app/: main.py
engine/: agent.py  chatbot.py  example.py  graph.py  internal_tool.py
