[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["jaehak kim <ministove3yo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
tavily-python = "^0.5.1"
langchain-community = "^0.3.19"
typing-extensions = "^4.12.2"
langgraph = "^0.3.11"
langchain-openai = "^0.3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app.main:main"
